--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,2 +1,13 @@
 server:
   port: 8080
+
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+  spring:
+    datasource:
+      url:
+      username:
+      password:
