--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,22 @@ repositories {
 
 dependencies {
 
+	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// OAuth2 소셜 로그인 (카카오/구글 등)
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	// Redis (refresh 토큰 보관/로테이션/로그아웃)
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// Redis(Refresh 토큰 저장용
+	implementation 'com.auth0:java-jwt:4.4.0'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+//	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
