--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,61 @@
-# Compiled class file
-*.class
+# ========================
+# Gradle
+# ========================
+/.gradle
+/build/
+/out/
 
-# Log file
-*.log
+# ========================
+# IntelliJ IDEA
+# ========================
+.idea/
+/*.iml
+/*.iws
+*.ipr
 
-# BlueJ files
-*.ctxt
+# ========================
+# Eclipse
+# ========================
+*.classpath
+*.project
+*.settings/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# ========================
+# OS
+# ========================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Package Files #
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+# ========================
+# Logs
+# ========================
+/logs/
+/*.log
+
+# ========================
+# Spring Boot
+# ========================
+/target/
+/bin/
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# ========================
+# Others
+# ========================
+*.class
+*.tmp
+*.bak
+*.swp
