--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,13 +1,39 @@
+file:
+  upload-dir: ./uploads #사진폴더 -> 파일이 어디/얼마까지 저장될지 서버가 알아야 함.
+
 server:
   port: 8080
 
 spring:
-  config:
-    activate:
-      on-profile: dev
+  datasource:
+    url: jdbc:mysql://144.24.80.209:3306/safestargram?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    username: safestargram
+    password: safetyworld
+  data:
+    redis:
+      host: 144.24.80.209
+      port: 6606
+      username: safestargram
+      password: safetyworld
+      timeout: 2s
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
+  servlet: #사진폴더 -> 파일이 어디/얼마까지 저장될지 서버가 알아야 함.
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
 
-  spring:
-    datasource:
-      url:
-      username:
-      password:
+
+
+#spring:
+#  datasource:
+#    url: jdbc:mysql://127.0.0.1:3306/safestargram?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+#    username: root
+#    password: 12341234
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#spring:
+#  profiles:
+#    active: dev
