--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,35 @@
   spring:
     application:
-      name: safestargram
-  profiles:
-    default: dev
+        name: safestargram
+    profiles:
+        default: dev
+  jwt:
+      secret: ${JWT_SECRET}
+      access-ttl: 1h
+      refresh-ttl: 13d
+      issuer: your-service
+
+  security:
+      oauth2:
+          client:
+              registration:
+                  google:
+                      client-id:
+                      client-secret:
+                      scope: profile,email
+                      redirect-uri:
+                  kakao:
+                      client-id:
+                      client-secret:
+                      client-authentication-method: client_secret_post
+                      authorization-grant-type: authorization_code
+                      redirect-uri:
+                      scope: account_email,profile_nickname,profile_image
+              provider:
+                  kakao:
+                      authorization-uri: https://kauth.kakao.com/oauth/authorize
+                      token-uri:         https://kauth.kakao.com/oauth/token
+                      user-info-uri:     https://kapi.kakao.com/v2/user/me
+                      user-name-attribute: id
+
+
