--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,1 +1,37 @@
+file:
+  upload-dir: ./uploads #사진폴더 -> 파일이 어디/얼마까지 저장될지 서버가 알아야 함.
+
+server:
+  port: 8080
+
 spring:
+  datasource:
+    url: jdbc:mysql://144.24.80.209:3306/safestargram?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    username: safestargram
+    password: safetyworld
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 2s
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
+  servlet: #사진폴더 -> 파일이 어디/얼마까지 저장될지 서버가 알아야 함.
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+
+
+
+#spring:
+#  datasource:
+#    url: jdbc:mysql://127.0.0.1:3306/safestargram?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+#    username: root
+#    password: 12341234
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#spring:
+#  profiles:
+#    active: dev
